@@ -2,6 +2,7 @@ DOMjudge Programming Contest Judging System
 
 Version 1.3.0 - SVN
 -------------------
+ - Auto-focus the clarification textarea.
 
 Version 1.3.0 Release Candidate 1 - 15 September 2006
 -----------------------------------------------------
